labs/aks/deploy/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: res-edge
  labels:
    app: ui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: app
        image: ghcr.io/cse-labs/res-edge-ui:0.20
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8088
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          failureThreshold: 10
          periodSeconds: 60
        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
          requests:
            memory: 512Mi
            cpu: 500m
