labs/aks/deploy/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: res-edge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx
  tls:
  - secretName: ui
    hosts:
    - res-edge.com
  rules:
  - host: res-edge.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui
            port:
              number: 8088
